removed research overview

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
 						<li class="nav-item active">
 							<a class="nav-link" href="index.html"><i class="fas fa-user fa-fw mr-2"></i>About Me<span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item">
-						    	<a class="nav-link" href="research-overview.html"><i class="fas fa-arrow-alt-circle-right mr-2"></i> Research</a>
-						</li>
+
 
 						<li class="nav-item">
 							<a class="nav-link" href="resume.html"><i class="fas fa-file-alt fa-fw mr-2"></i>Resume</a>
@@ -118,11 +116,10 @@
 							<p> Hey, my name is Vinh Vu and welcome to my website!  </p>
 							<p> I'm still setting up the rest of my website but the front page is complete!</p>
 							<p> 
-								I am a third year PhD student going into my forth year at the University of Sheffield and my research is on the Turbulent fluid flow through a fractal array of obstacles. You can click on <a class="link-on-bg" href="research-overview.html"> this link </a>  to found out more about what I do. Finally, check out my <a class="link-on-bg" href="resume.html">online CV</a>. Note that I go under Vinh Vu although my formal name is Quang Vinh Vu.  </p>
+								I am a third year PhD student going into my forth year at the University of Sheffield and my research is on the Turbulent fluid flow through a fractal array of obstacles. Finally, check out my <a class="link-on-bg" href="resume.html">online CV</a>. Note that I go under Vinh Vu although my formal name is Quang Vinh Vu.  </p>
 						</div><!--//bio-->
 						<div class="mb-4">
-							<a class="btn btn-primary mr-2 mb-3" href="research-overview.html"><i class="fas fa-arrow-alt-circle-right mr-2"></i><span class="d-none d-md-inline"></span> Research overview</a>
-							<a class="btn btn-secondary mb-3" href="resume.html"><i class="fas fa-file-alt mr-2"></i><span class="d-none d-md-inline">View</span> Resume</a>
+							<a class="btn btn-primary mb-3" href="resume.html"><i class="fas fa-file-alt mr-2"></i><span class="d-none d-md-inline">View</span> Resume</a>
 						</div>
 					</div><!--//media-body-->
 					<img class="profile-image mb-3 mb-lg-0 ml-lg-5 mr-md-0" src="assets/images/profile-lg_2.jpg" alt="">
@@ -178,32 +175,10 @@
 		
 		<div class="container"><hr></div>
 		
-		<footer class="footer text-center py-4">
-			<small class="copyright">Template Copyright &copy; <a href="https://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>
-		</footer>
 		
 	</div>
 
-	<!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->  
-	<div id="config-panel" class="config-panel d-none d-lg-block">
-		<div class="panel-inner">
-			<a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i class="fas fa-cog mx-auto" data-fa-transform="down-6" ></i></a>
-			<h5 class="panel-title">Choose Colour</h5>
-			<ul id="color-options" class="list-inline mb-0">
-				<li class="theme-1 active list-inline-item"><a data-style="assets/css/theme-1.css" href="#"></a></li>
-				<li class="theme-2  list-inline-item"><a data-style="assets/css/theme-2.css" href="#"></a></li>
-				<li class="theme-3  list-inline-item"><a data-style="assets/css/theme-3.css" href="#"></a></li>
-				<li class="theme-4  list-inline-item"><a data-style="assets/css/theme-4.css" href="#"></a></li>
-				<li class="theme-5  list-inline-item"><a data-style="assets/css/theme-5.css" href="#"></a></li>
-				<li class="theme-6  list-inline-item"><a data-style="assets/css/theme-6.css" href="#"></a></li>
-				<li class="theme-7  list-inline-item"><a data-style="assets/css/theme-7.css" href="#"></a></li>
-				<li class="theme-8  list-inline-item"><a data-style="assets/css/theme-8.css" href="#"></a></li>
-				<li class="theme-9  list-inline-item"><a data-style="assets/css/theme-9.css" href="#"></a></li>
-				<li class="theme-10  list-inline-item"><a data-style="assets/css/theme-10.css" href="#"></a></li>
-			</ul>
-			<a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-		</div><!--//panel-inner-->
-	</div><!--//configure-panel-->
+
 
 	<!-- Javascript -->          
 	<script src="assets/plugins/jquery-3.4.1.min.js"></script>
