--- a/index.html
+++ b/index.html
@@ -116,17 +116,14 @@
 							<p> Hi, I'm Vinh. I blend engineering and mathematics, delving into the world of fluid dynamics with a focus on machine learning. This is an exciting time with rapid advances in machine learning methods, and I aim to use those advances to help solve significant problems in fluid dynamics.  </p>
 							<p> 
 								I hold a PhD in Mathematics, specialising in creating convolutional neural networks to predict turbulent fluid flows. My thesis is attached to this website. 
-								
-								<section class="cta-section theme-bg-light py-5">
-									<div class="container text-center single-col-max-width">
-										<h2 class="heading mb-3">Online Resume</h2>
-										<a class="btn btn-primary" href="./assets/CV.pdf" target="_blank"><i class="fas fa-file-pdf mr-2"></i>Download PDF Version</a>
 						
-									</div><!--//container-->
-								</section>
+						<div class="mb-4">
+							<a class="btn btn-primary mb-3" href="./assets/thesis.pdf"><i class="fas fa-file-alt mr-2"></i><span class="d-none d-md-inline"></span>Thesis</a>
+						</div>
 
 
-								Finally, check out my <a class="link-on-bg" href="resume.html">online CV</a>. Note that I go under Vinh Vu although my formal name is Quang Vinh Vu.  </p>
+
+						Finally, check out my <a class="link-on-bg" href="resume.html">online CV</a>. Note that I go under Vinh Vu although my formal name is Quang Vinh Vu.  </p>
 						</div><!--//bio-->
 						<div class="mb-4">
 							<a class="btn btn-primary mb-3" href="resume.html"><i class="fas fa-file-alt mr-2"></i><span class="d-none d-md-inline">View</span> Resume</a>
