--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<h2 class="name font-weight-bold mb-1">Vinh Vu</h2>
 						<div class="tagline mb-3">Engineer turned mathematician with a passion for fluid dynamics and machine learning, holding a PhD in Mathematics </div>
 						<div class="bio mb-4">
-							<p> Hi, I'm Vinh. I blend engineering and mathematics, delving into the world of fluid dynamics with a focus on machine learning. This is an exciting time with rapid advances in machine learning methods, and I aim to use those advances to help solve significant problems in fluid dynamics. The aim of this website is to showcase my expertise as an applied mathematician in fluid dynamics and machine learning, featuring my resume, academic and personal projects. 
+							<p> Hi, I'm Vinh. I blend engineering and mathematics, delving into the world of fluid dynamics with a focus on machine learning. This is an exciting time with rapid advances in machine learning methods, and I aim to use those advances to help solve significant problems in fluid dynamics. The aim of this website is to showcase my expertise as an applied mathematician in fluid dynamics and machine learning, featuring my resume, academic and personal projects. I will upload these on their own webpage soon. 
 							</p>
 							<p> 
 						I hold a PhD in Mathematics, specialising in creating convolutional neural networks to predict turbulent fluid flows. You can read my thesis below. I am currently employed as a Mathematical Modeler at an engineering consultancy, where my responsibilities include utilizing hydraulic models for flood prediction and employing Computational Fluid Dynamics (CFD) models to simulate fluid flow within complex real-world systems. 
@@ -116,7 +116,7 @@
 						
 					</p>
 					<p>
-						Additionally, I also provide tuition services. I can tutor GCSE, A-Level and Unviersity level Mathematics, and I can tutor Engineering at a university level. 
+						Additionally, I also provide tuition services. I can tutor GCSE, A-Level and Unviersity level Mathematics, and I can tutor Engineering at a university level. Please feel free to contact me if you wish to inquire about my tutoring services. 
 					</p>
 						<div class="mb-4">
 							<a class="btn btn-primary mb-3" href="./assets/thesis.pdf"><i class="fas fa-file-alt mr-2"></i><span class="d-none d-md-inline"></span>Thesis</a>
