--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 									I hold a PhD in Mathematics, specialising in creating convolutional neural networks to predict turbulent fluid flows. You can read my thesis below. I am currently employed as a Mathematical Modeler at an engineering consultancy, where my responsibilities include utilizing hydraulic models for flood prediction and employing Computational Fluid Dynamics (CFD) models to simulate fluid flow within complex real-world systems.	
 								</p>
-								 	Additionally, I also provide tuition services. I started tutoring when I was 18 and I have years of experience in doing so. During my PhD, I also taught many tutorials for undergraduate maths and engineering students at the University of Sheffield.  I can tutor GCSE, A-Level and Unviersity level Mathematics, and I can tutor civil, mechanical and aerospace engineering at a university level. Please feel free to contact me if you wish to inquire about my tutoring services. 
+								 	Additionally, I also provide tuition services. I started tutoring when I was 18 and I have years of experience in doing so. During my PhD, I also taught many tutorials for undergraduate maths and engineering students at the University of Sheffield.  I can tutor GCSE, A-Level and Unviersity level Mathematics, and I can tutor civil, mechanical and aerospace engineering at a university level. Please feel free to contact me if you wish to inquire about my tutoring services. test
 							
 							<p> 
 						
